# render-system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  advanced_demo.cpp  blending_demo.cpp  main.cpp  main.h.in  old.cpp  stencil_demo.cpp
include/glad/: glad.h
include/rendersystem/: Camera.h  Cuboid.h  Lights.h  Mesh.h  Model.h  Shader.h  Sphere.h  Utils.h
shaders/: blend.frag  colors.frag  colors.vert  drop.vert  quad.frag  quad.vert  shaderSingleColor.frag  single_color.frag  sphere.frag  sphere.vert
src/: CMakeLists.txt  Camera.cpp  Cuboid.cpp  Lights.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sphere.cpp  Utils.cpp  glad.c
